--- a/src/app/components/tx/tx.component.html
+++ b/src/app/components/tx/tx.component.html
@@ -79,9 +79,9 @@
                   <h3 class="glance-title"><mdb-badge style="cursor:pointer;" 
                     (click)="openTxsListDialog(tx.msg[i].value.from_address)"color="pink">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.from_address ) : false; else elseSender">
-                        {{ (appState | async).valsMap.get( tx.msg[i].value.from_address )}}
-                      </span>
-                      <ng-template #elseSender>{{ tx.msg[i].value.from_address }}</ng-template>
+                      {{ (appState | async).valsMap.get( tx.msg[i].value.from_address )}}
+                    </span>
+                    <ng-template #elseSender>{{ tx.msg[i].value.from_address }}</ng-template>
                   </mdb-badge></h3>
                 </li>
                 
@@ -90,9 +90,9 @@
                   <h3 class="glance-title"><mdb-badge color="pink" style="cursor:pointer;" 
                     (click)="openTxsListDialog(tx.msg[i].value.to_address)">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.to_address ) : false; else elseRecipient">
-                        {{ (appState | async).valsMap.get( tx.msg[i].value.to_address )}}
-                      </span>
-                      <ng-template #elseRecipient>{{ tx.msg[i].value.to_address }}</ng-template>
+                      {{ (appState | async).valsMap.get( tx.msg[i].value.to_address )}}
+                    </span>
+                    <ng-template #elseRecipient>{{ tx.msg[i].value.to_address }}</ng-template>
                   </mdb-badge></h3>
                 </li>
                 
@@ -101,9 +101,9 @@
                   <h3 class="glance-title"><mdb-badge color="pink" style="cursor:pointer;" 
                     (click)="openTxsListDialog(tx.msg[i].value.delegator_address)">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.delegator_address ) : false; else elseDelegator">
-                        {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
-                      </span>
-                      <ng-template #elseDelegator>{{tx.msg[i].value.delegator_address}}</ng-template> 
+                      {{ (appState | async).valsMap.get( tx.msg[i].value.delegator_address )}}
+                    </span>
+                    <ng-template #elseDelegator>{{tx.msg[i].value.delegator_address}}</ng-template> 
                   </mdb-badge></h3>
                 </li>
                 
@@ -112,9 +112,9 @@
                   <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_address )"
                     style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.validator_address ) : false; else elseValidator">
-                        {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
-                      </span>
-                      <ng-template #elseValidator>{{tx.msg[i].value.validator_address}}</ng-template>
+                      {{ (appState | async).valsMap.get( tx.msg[i].value.validator_address )}}
+                    </span>
+                    <ng-template #elseValidator>{{tx.msg[i].value.validator_address}}</ng-template>
                   </mdb-badge></h3>
                 </li><br *ngIf="action === 'withdraw delegator reward'">
 
@@ -124,9 +124,9 @@
                   <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_src_address )"
                     style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.validator_src_address ) : false; else elseSrcValidator">
-                        {{ (appState | async).valsMap.get( tx.msg[i].value.validator_src_address )}}
-                      </span>
-                      <ng-template #elseSrcValidator>{{tx.msg[i].value.validator_src_address}}</ng-template> 
+                      {{ (appState | async).valsMap.get( tx.msg[i].value.validator_src_address )}}
+                    </span>
+                    <ng-template #elseSrcValidator>{{tx.msg[i].value.validator_src_address}}</ng-template> 
                   </mdb-badge></h3>
                 </li>
                 
@@ -136,12 +136,37 @@
                   <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.validator_dst_address )"
                     style="cursor: pointer">
                     <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.validator_dst_address ) : false; else elseDstValidator">
-                        {{ (appState | async).valsMap.get( tx.msg[i].value.validator_dst_address )}}
-                      </span>
-                      <ng-template #elseDstValidator>{{tx.msg[i].value.validator_dst_address}}</ng-template> 
+                      {{ (appState | async).valsMap.get( tx.msg[i].value.validator_dst_address )}}
+                    </span>
+                    <ng-template #elseDstValidator>{{tx.msg[i].value.validator_dst_address}}</ng-template> 
                   </mdb-badge></h3>
                 </li>
 
+                <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgEditValidator'">
+                  <li *ngIf="tx.msg[i].value.address" 
+                      class="list-group-item d-flex justify-content-between align-items-center">
+                    Validator
+                    <h3 class="glance-title"><mdb-badge color="pink" (click)="openValidatorDetailDialog( tx.msg[i].value.address )"
+                      style="cursor: pointer">
+                      <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( tx.msg[i].value.address ) : false; else elseDstValidator">
+                        {{ (appState | async).valsMap.get( tx.msg[i].value.address )}}
+                      </span>
+                      <ng-template #elseDstValidator>{{tx.msg[i].value.address}}</ng-template> 
+                    </mdb-badge></h3>
+                  </li>
+                  <li *ngFor="let key of objectKeys(tx.msg[i].value.Description)" 
+                      class="list-group-item d-flex justify-content-between align-items-center">
+                    {{ key | titlecase }}
+                    <h3 class="glance-title">
+                      <mdb-badge color="pink">
+                          <span *ngIf="tx.msg[i].value.Description[key] !== '[do-not-modify]'; else elseUpdateValue">
+                            {{ tx.msg[i].value.Description[key] }}
+                          </span>
+                          <ng-template #elseUpdateValue>{{ 'Unchanged' }}</ng-template>
+                      </mdb-badge>
+                    </h3>
+                  </li>
+                </span>
 
                 <span *ngIf="tx.msg[i].type === 'cosmos-sdk/MsgMultiSend'">
                   <li *ngFor="let input of tx.msg[i].value.inputs" 
