Universal search added

--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -3,7 +3,7 @@
   <div class="row mat-elevation-z8 table-responsive text-nowrap scrollbar-primary text-nowrap">
   <!-- <div *ngIf="(appState | async).validators.serviceLoaded; else elseBlock" 
        class="row mat-elevation-z8 table-responsive text-nowrap scrollbar-primary text-nowrap"> -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-8">
           <mat-form-field>
@@ -14,7 +14,7 @@
           <button (click) = "queryBlock(queryInputRef.value)" mat-raised-button color="accent">Search</button>    
         </div>
       </div>
-    </div>
+    </div> -->
     <table mat-table 
                [dataSource]="blocks" 
                class="mat-elevation-z8 w-auto">
