--- a/src/app/components/account-detail/account-detail.component.html
+++ b/src/app/components/account-detail/account-detail.component.html
@@ -48,7 +48,7 @@
       <div class="col-12">
         <div class="card mat-elevation-z8 mb-3">
           <mdb-card-header>
-            <mdb-card-title>Transactions</mdb-card-title>
+            <mdb-card-title>Transactions (Last 100 blocks)</mdb-card-title>
           </mdb-card-header>
           <mdb-card-body>
             <app-txs-list-card [address]="delegator.address"></app-txs-list-card>
