--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -1,6 +1,6 @@
 <span *ngIf="txs && txs.length >= INITIAL_TXS_COUNT; else elseLoading">
   <div (scroll)="onScroll($event)" class="row table-responsive text-nowrap scrollbar-primary main-row mat-elevation-z8">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-8">
           <mat-form-field>
@@ -11,19 +11,7 @@
           <button (click) = "queryTx(queryInputRef.value)" mat-raised-button color="accent">Search</button>    
         </div>
       </div>
-      <!-- TEST ACCOUNT QUERY -->
-      <!-- <div class="row">
-        <div class="col-8">
-          <mat-form-field>
-            <input #queryInputRef2 matInput placeholder="Enter account address">
-          </mat-form-field>
-        </div>
-        <div class="col-4">
-          <button (click) = "queryAccount(queryInputRef2.value)" mat-raised-button color="accent">Search</button>    
-        </div>
-      </div> -->
-      <!-- END TEST ACCOUNT QUERY -->
-    </div>
+    </div> -->
     <table mat-table
           [dataSource]="dataSource" 
           multiTemplateDataRows
