--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -162,6 +162,14 @@
         <navlinks>
           <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav">
             <li class="nav-item">
+              <form class="form-inline waves-light waves-light ml-auto clearfix d-none d-sm-inline-block" mdbWavesEffect>
+                <div  class="md-form my-0">
+                  <input style="width: 30vw;" #searchQueryRef class="form-control mr-sm-2" type="text" placeholder="Enter tx hash / block height / address" aria-label="Search">
+                  <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
+                </div>
+              </form>
+            </li>
+            <!-- <li class="nav-item">
               <a class="nav-link waves-light" mdbWavesEffect routerLink="/validators" routerLinkActive="active">
                 <i class="fa fa-users"></i>
                 <h3 class="clearfix d-none d-sm-inline-block">Validator</h3>
@@ -185,6 +193,31 @@
                 <i class="fa fa-university"></i>
                 <h3 class="clearfix d-none d-sm-inline-block">Governance</h3>
               </a>
+            </li> -->
+
+            <li class="nav-item dropdown btn-group" dropdown>
+              <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+                <i class="fa fa-bookmark"></i>
+                <h3 class="clearfix d-none d-sm-inline-block">Pages</h3>
+              </a>
+              <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
+                <a class="dropdown-item" mdbWavesEffect routerLink="/validators">
+                  <i class="fa fa-users"></i>
+                  Validator
+                </a>
+                <a class="dropdown-item" mdbWavesEffect routerLink="/blocks">
+                  <i class="fa fa-cubes"></i>
+                  Blocks
+                </a>
+                <a class="dropdown-item" mdbWavesEffect routerLink="/txs">
+                  <i class="fa fa-tasks"></i>
+                  Transactions
+                </a>
+                <a class="dropdown-item" mdbWavesEffect routerLink="/gov">
+                  <i class="fa fa-university"></i>
+                  Governance
+                </a>
+              </div>
             </li>
 
             <li class="nav-item dropdown btn-group" dropdown>
@@ -207,14 +240,14 @@
     <!--Main Layout-->
     <main>
         <body>
-            <div class="row">
-              <form style="width: 90vw" class="form-inline waves-light" mdbWavesEffect>
+            <!-- <div class="row search-box">
+              <form style="width: 90vw;" class="form-inline waves-light" mdbWavesEffect>
                 <div  class="md-form my-0">
                   <input style="width: 70vw" #searchQueryRef class="form-control mr-sm-2" type="text" placeholder="Enter tx hash / block height / address" aria-label="Search">
-                  <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="success" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
+                  <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="pink" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
                 </div>
               </form>
-            </div>
+            </div> -->
           <app-status-bar></app-status-bar>
           <!-- <app-validator></app-validator> -->
           <!-- <app-carousel></app-carousel> -->
