--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -1,13 +1,13 @@
 <section class="status-bar">
-  <div class="row header-row" @dropDownAnimation>
+  <div class="row header-row">
     <!-- <h1 class="title header-title" [appBgHighlight]="'orange'" defaultColor="transparent">
       Coris Explorer 
     </h1> -->
-    <h2 class="subtitle header-subtitle" @fadeInAnimation>{{(blocksState | async).blocks[0]?.header.chain_id}}</h2>
+      <h2 class="subtitle header-subtitle">{{(blocksState | async).blocks[0]?.header.chain_id}}</h2>
   </div>
   <!-- <app-universal-search-bar (onSelectedOption)="onSelectedFilter($event)"></app-universal-search-bar> -->
-  <div class="row proposer-row">
-    <div>
+  <div class="row">
+    <div class="proposer-row">
       <h2 *ngIf="(appState | async).valsMap.size" 
           class="title proposer-title">
         <i class="ion-person"></i>&nbsp; Proposer - 
