--- a/src/app/components/txs/txs-list-card/txs-list-card.component.html
+++ b/src/app/components/txs/txs-list-card/txs-list-card.component.html
@@ -6,7 +6,9 @@
             <ng-container matColumnDef="hash">
               <th mat-header-cell *matHeaderCellDef> Hash </th>
               <td mat-cell *matCellDef="let tx">
-                {{ tx.txhash }}
+                <span (click)="openTxDialog(tx.txhash)" style="cursor: pointer;" >
+                  {{ tx.txhash  | slice:0:15 }}...
+                </span>
                 <i  class="ion-ios-copy copy-button" 
                     style="cursor: pointer;" 
                     ngxClipboard [cbContent]="tx.txhash" 
@@ -31,7 +33,9 @@
             <ng-container matColumnDef="hash">
               <th mat-header-cell *matHeaderCellDef> Hash </th>
               <td mat-cell *matCellDef="let tx">
-                {{ tx.txhash  | slice:0:15 }}...
+                <span (click)="openTxDialog(tx.txhash)" style="cursor: pointer;" >
+                  {{ tx.txhash  | slice:0:15 }}...
+                </span>
                 <i  class="ion-ios-copy copy-button" 
                     style="cursor: pointer;" 
                     ngxClipboard [cbContent]="tx.txhash" 
