--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -209,7 +209,9 @@
                                 <ng-container matColumnDef="hash">
                                   <th mat-header-cell *matHeaderCellDef> Hash </th>
                                   <td mat-cell *matCellDef="let tx">
-                                    {{ tx.txhash }}
+                                    <span (click)="openTxDialog(tx.txhash)" style="cursor: pointer;" >
+                                      {{ tx.txhash }}
+                                    </span>
                                     <i  class="ion-ios-copy copy-button" 
                                         style="cursor: pointer;" 
                                         ngxClipboard [cbContent]="tx.txhash" 
@@ -234,7 +236,9 @@
                                 <ng-container matColumnDef="hash">
                                   <th mat-header-cell *matHeaderCellDef> Hash </th>
                                   <td mat-cell *matCellDef="let tx">
-                                    {{ tx.txhash }}
+                                    <span (click)="openTxDialog(tx.txhash)" style="cursor: pointer;" >
+                                      {{ tx.txhash }}
+                                    </span>
                                     <i  class="ion-ios-copy copy-button" 
                                         style="cursor: pointer;" 
                                         ngxClipboard [cbContent]="tx.txhash" 
