--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -251,6 +251,18 @@
               </form>
             </div> -->
           <app-status-bar></app-status-bar>
+
+          <!-- Material Theme Test -->
+          <!-- <div class="row" [ngClass]="{'dark-theme': isDarkTheme | async}">
+            <div class="mat-app-background">
+              <app-test></app-test>
+              <div class="content">
+                WTF<br>is<br>up<br>G?
+              </div>
+            </div>
+          </div> -->
+          <!-- Material Theme Test -->
+
           <!-- <app-validator></app-validator> -->
           <!-- <app-carousel></app-carousel> -->
           <!-- <app-test></app-test> -->
