--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+// @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 // @import '~bootstrap/dist/css/bootstrap.min.css';
 // @import "https://fonts.googleapis.com/css?family=Lato:100,300,300i,400";
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,300i,400);
+@import "app/theme";
 
 // @viewport {
 //   width: device-width ;
