--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -253,14 +253,9 @@
           <app-status-bar></app-status-bar>
 
           <!-- Material Theme Test -->
-          <!-- <div class="row" [ngClass]="{'dark-theme': isDarkTheme | async}">
-            <div class="mat-app-background">
-              <app-test></app-test>
-              <div class="content">
-                WTF<br>is<br>up<br>G?
-              </div>
-            </div>
-          </div> -->
+
+            <!-- <app-test></app-test> -->
+
           <!-- Material Theme Test -->
 
           <!-- <app-validator></app-validator> -->
