--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <!-- <app-main-nav> -->
-    <app-sidenav></app-sidenav>
+    <div [ngClass]="{'dark-theme': isDarkTheme | async}">
+      <div class="mat-app-background">
+        <app-sidenav></app-sidenav>
+      </div>
+    </div>
+    
     <!-- <body>
       <app-status-bar></app-status-bar>
       <router-outlet></router-outlet>
