--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -165,7 +165,7 @@
             <li class="nav-item">
               <form class="form-inline waves-light waves-light ml-auto clearfix d-none d-xl-inline-block" mdbWavesEffect>
                 <div  class="md-form my-0">
-                  <input style="width: 30vw;" #searchQueryRef class="form-control mr-sm-2" type="text" placeholder="enter moniker / address / height / hash" aria-label="Search">
+                  <input style="width: 30vw;" #searchQueryRef class="form-control mr-sm-2" type="text" placeholder="Enter moniker / address / height / hash" aria-label="Search">
                   <button (click)="onSearchBtnClick(searchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
                 </div>
               </form>
