--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -1,10 +1,10 @@
-<section>
+<section class="py-0">
     <div class="row">
         <!-- First column -->
-        <div class="col-lg-6 col-md-12">
-          <mdb-card class="testimonial-card mb-3 mat-elevation-z8">
+        <div class="px-0 col-lg-6 col-md-12">
+          <mdb-card class="rounded-0 testimonial-card">
                 <!--Bacground color-->
-                <div class="card-up indigo">
+                <div class="rounded-0 card-up indigo">
                 </div>
           
                 <!--Avatar-->
@@ -45,16 +45,15 @@
                         </div>
                       </div>
                     </mdb-tab>
-           
                   </mdb-tabset>
                 </mdb-card-body>
           </mdb-card>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="px-0 col-lg-6 col-md-12">
           <!-- /.Panel -->
-          <div class="mb-5">
-            <mdb-card alignment="left" class="mat-elevation-z8 mb-3">
-              <mdb-card-header>
+          <!-- <div class="mb-5"> -->
+            <mdb-card alignment="left" class="rounded-0">
+              <mdb-card-header class="rounded-0">
                 <mdb-card-title>Delegations</mdb-card-title>
               </mdb-card-header>
               <mdb-card-body class="bg-transparent">
@@ -91,17 +90,17 @@
                 </div>
               </mdb-card-body>            
             </mdb-card>
-          </div>
+          <!-- </div> -->
           <!-- /.Panel -->
         </div>
         <!-- /.First column -->
         
         <!-- Second column -->
-        <div class="col-lg-6 col-md-12">
+        <div class="px-0 col-lg-6 col-md-12">
           <!--Panel-->
-          <div class="mb-5">
-            <mdb-card alignment="left" class="mat-elevation-z8 mb-3">
-            <mdb-card-header>
+          <!-- <div class="mb-5"> -->
+            <mdb-card alignment="left" class="rounded-0">
+            <mdb-card-header class="rounded-0">
               <mdb-card-title>At a Glance</mdb-card-title>
             </mdb-card-header>
             <mdb-card-body>
@@ -189,16 +188,14 @@
               </div>
             </mdb-card-body>
             </mdb-card>
-          </div>
+          <!-- </div> -->
           <!--/.Panel-->
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="px-0 col-lg-6 col-md-12">
           <!-- Panel -->
-          <div class="mb-5">
-            <mdb-card alignment="left" class="mat-elevation-z8 mb-3">
-              <mdb-card-header>
-                <!-- <mdb-card-title>Account: {{ validator.account.value.address }}</mdb-card-title> -->
-                <!-- <mat-card-subtitle>Transactions (last 100)</mat-card-subtitle> -->
+          <!-- <div class="mb-5"> -->
+            <mdb-card alignment="left" class="rounded-0">
+              <mdb-card-header class="rounded-0">
                 <mdb-card-title>Transactions</mdb-card-title>
               </mdb-card-header>
               <mdb-card-body>
@@ -263,48 +260,7 @@
                 </div>
               </mdb-card-body>
             </mdb-card>
-          </div>
+          <!-- </div> -->
         </div>   
   </div>
 </section>
-<!-- <div class="card-body"> -->
-                <!-- <div class="table-responsive"> -->
-                      <!-- <table class="table">
-                          <thead>
-                              <tr>
-                                  <th>Status</th>
-                                  <th>Title</th>
-                                  <th>User</th>
-                                  <th>Date</th>
-                              </tr>
-                          </thead>
-                          <tbody>
-                              <tr>
-                                  <td><span class="badge green">Open</span></td>
-                                  <td>Lorem ipsum dolor</td>
-                                  <td>John Doe</td>
-                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                              </tr>
-                              <tr>
-                                  <td><span class="badge green">Open</span></td>
-                                  <td>Lorem ipsum dolor</td>
-                                  <td>John Doe</td>
-                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                              </tr>
-                              <tr>
-                                  <td><span class="badge warning-color">In progress</span></td>
-                                  <td>Lorem ipsum dolor</td>
-                                  <td>John Doe</td>
-                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                              </tr>
-                              <tr>
-                                  <td><span class="badge red">Closed</span></td>
-                                  <td>Lorem ipsum dolor</td>
-                                  <td>John Doe</td>
-                                  <td class="hour"><small><span class="grey-text"><mdb-icon far icon="clock" aria-hidden="true"></mdb-icon> 12 min</span></small></td>
-                              </tr>
-                          </tbody>
-                      </table> -->
-                <!-- </div>
-                <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Power Events</a> -->
-              <!-- </div> -->
